--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
-
+body {
+  background-image: url("../images/mysteryScienceBg.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%; }
 
 /*# sourceMappingURL=main.css.map */
