--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@ body {
 	background-image: url("../images/mysteryScienceBg.jpg");
 	background-repeat: no-repeat;
 	background-size: 100%;
+  background-attachment: fixed;
 }
 
 #pageWrapper {
