targeting for favorties and updated index for new requirements

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
-body {
-	background-image: url("../images/mysteryScienceBg.jpg");
-	background-repeat: no-repeat;
-	background-size: 100%;
-}
+// body {
+// 	background-image: url("../images/mysteryScienceBg.jpg");
+// 	background-repeat: no-repeat;
+// 	background-size: 100%;
+// }
 
 #pageWrapper {
 	width: 80%;
