--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,15 @@ h1 {
 	margin-bottom: 20px;
 }
 
+.moviePoster {
+	height: 350px;
+	width: 250px;
+}
+
 .rating {
   font-size: .5em;
+}
+
+.movieCard {
+	max-width: 250px;
 }
