--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,8 @@
+body {
+	background:  url(../images/mysteryScienceBg.jpg) no-repeat center center fixed; 
+	background-size: cover;
+	text-shadow: 1px 1px #fff;
+}
 
 i {
 	padding-right: 5px;
@@ -22,14 +27,20 @@ h1 {
 }
 
 .moviePoster {
-	height: 350px;
-	width: 250px;
+	// height: 350px;
+	max-width: 225px;
 }
 
 .rating {
   font-size: .5em;
 }
 
-.movieCard {
-	max-width: 250px;
+.movieCard,
+ {
+	max-width: 225px;
+	max-height: 325;
+}
+
+.br-widget {
+	padding: 5%;
 }
