--- a/css/main.css
+++ b/css/main.css
@@ -21,16 +21,18 @@ h1 {
   margin-bottom: 20px; }
 
 .moviePoster {
-  max-width: 225px; }
+  height: 265px;
+  max-width: 195px; }
 
 .rating {
   font-size: .5em; }
 
 .movieCard {
-  max-width: 225px;
-  max-height: 325; }
-
-.br-widget {
-  padding: 5%; }
+  background: #fff;
+  text-align: center;
+  margin: 2% 3.5%;
+  border: 3px solid #fff;
+  box-shadow: 100 100px 100px rgba(0, 0, 0, 0.15);
+  background-color: rgba(255, 255, 255, 0.8); }
 
 /*# sourceMappingURL=main.css.map */
