--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,9 @@
 body {
 	background:  url(../images/mysteryScienceBg.jpg) no-repeat center center fixed; 
 	background-size: cover;
+	font-family: 'Acme', sans-serif;
 	text-shadow: 1px 1px #fff;
+	font-size: 1.5em;
 }
 
 i {
@@ -11,6 +13,18 @@ i {
 h1 {
 	margin-top: 0;
 	margin-bottom: 20px;
+	color: #FCFDFB;
+	font-size: 4em;
+	text-shadow: 3px 3px #000;
+}
+
+h3 {
+	font-size: 2.25em;
+}
+
+.btn-primary {
+	text-shadow: 1px 1px #000;
+	font-size: 1em;
 }
 
 #pageWrapper {
@@ -45,6 +59,4 @@ h1 {
 	background-color: rgba(255, 255, 255, 0.8);
 }
 
-.br-widget {
-	// padding: 5%;
-}
+
