--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,26 @@
 body {
   background: url(../images/mysteryScienceBg.jpg) no-repeat center center fixed;
   background-size: cover;
-  text-shadow: 1px 1px #fff; }
+  font-family: 'Acme', sans-serif;
+  text-shadow: 1px 1px #fff;
+  font-size: 1.5em; }
 
 i {
   padding-right: 5px; }
 
 h1 {
   margin-top: 0;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  color: #FCFDFB;
+  font-size: 4em;
+  text-shadow: 3px 3px #000; }
+
+h3 {
+  font-size: 2.25em; }
+
+.btn-primary {
+  text-shadow: 1px 1px #000;
+  font-size: 1em; }
 
 #pageWrapper {
   width: 80%;
