--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ h1 {
   text-shadow: 3px 3px #000; }
 
 h3 {
-  font-size: 2.25em; }
+  font-size: 2em; }
 
 .btn-primary {
   text-shadow: 1px 1px #000;
@@ -34,8 +34,7 @@ h3 {
 
 .moviePoster {
   height: 265px;
-  max-width: 195px;
-  min-width: 195px; }
+  width: 195px; }
 
 .rating {
   font-size: .5em; }
@@ -46,6 +45,8 @@ h3 {
   margin: 2% 3.5%;
   border: 3px solid #fff;
   box-shadow: 100 100px 100px rgba(0, 0, 0, 0.15);
-  background-color: rgba(255, 255, 255, 0.8); }
+  background-color: rgba(255, 255, 255, 0.8);
+  height: 500px;
+  width: 300px; }
 
 /*# sourceMappingURL=main.css.map */
