--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,7 +19,7 @@ h1 {
 }
 
 h3 {
-	font-size: 2.25em;
+	font-size: 2em;
 }
 
 .btn-primary {
@@ -42,8 +42,7 @@ h3 {
 
 .moviePoster {
 	height: 265px;
-	max-width: 195px;
-	min-width: 195px;
+	width: 195px;
 }
 
 .rating {
@@ -57,6 +56,8 @@ h3 {
 	border:3px solid #fff;
 	box-shadow: 100 100px 100px rgba(0,0,0,0.15);
 	background-color: rgba(255, 255, 255, 0.8);
+	height: 500px;
+	width: 300px;
 }
 
 
